# MPIHelloWorld

./: Makefile  README.md  compileAttributes.R  generateDocs.R  testRun.R
Repo/: DESCRIPTION  NAMESPACE  configure.ac
Repo/R/: Hello.R  package.R
Repo/src/: Hello.cpp  RcppExports.cpp
m4/: ax_check_compile_flag.m4  ax_compiler_vendor.m4  ax_compiler_version.m4  ax_openmp.m4
package/: configure  configure.ac
package/R/: RcppExports.R
package/man/: MPIHelloWorld-package.Rd
package/src/: #Hello.cpp#  Hello.cpp  Makevars.in
